src/objects/Database_Chapter_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains chapter code to database schema mappings</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_Id__c</fullName>
        <externalId>true</externalId>
        <label>Chapter Id</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FE_Database_Name__c</fullName>
        <label>FE Database Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RE_Database_Name__c</fullName>
        <label>RE Database Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Database_Chapter_Mapping</label>
</CustomObject>